# nbody

./: .gitignore  Cargo.toml  README.md  dev.sh  flake.nix  index.html  publish.sh
src/: lib.rs  main.rs  nbody.rs  pancam.rs
